<resources>
    <!-- Navigation Strings -->
    <string name="app_name">DDD Hammond</string>
    <string name="title_home">Home</string>
    <string name="title_contact">Contact Us</string>

    <!-- Default Strings -->
    <string name="no_events">Error Loading Events...</string>
    <string name="no_business">No Businesses Found</string>
    <string name="search_hint">Enter a Business Name</string>

    <!-- Contact Strings -->
    <string name="company_name">Hammond Downtown Development</string>
    <string name="company_street">#2 West Thomas St.</string>
    <string name="company_city">Hammond, LA 70401</string>
    <string name="company_phone">(985)277-5681</string>
    <string name="company_person_1">Chelsea Tallo \nExecutive Director \ntallo_ca@hammond.org</string>
    <string name="company_person_2">Olivia Graziano \nAdministrative Assistant And Farmers Market Manager \ngraziano_om@hammond.org</string>

    <!-- Action Strings -->
    <string name="action_search">Search</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_eat">Eat</string>
    <string name="action_drink">Drink</string>
    <string name="action_shop">Shop</string>
    <string name="action_play">Play</string>
    <string name="action_more">More</string>
    <string name="action_directions">Get Directions</string>
    <string name="action_website">Website</string>
</resources>
