<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_actions" >

        <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/action_map" />

    </group>

    <group
        android:id="@+id/group_businesses" >

        <item
            android:id="@+id/navigation_eat"
            android:title="@string/action_eat" />

        <item
            android:id="@+id/navigation_drink"
            android:title="@string/action_drink" />

        <item
            android:id="@+id/navigation_shop"
            android:title="@string/action_shop" />

        <item
            android:id="@+id/navigation_play"
            android:title="@string/action_play" />

        <item
            android:id="@+id/navigation_more"
            android:title="@string/action_more" />

    </group>

</menu>
